--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,15 +10,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-         >
-        
-        <provider 
-            android:name="com.example.gallery.ImageContentProvider"
-            android:authorities="com.example.gallery.Image" >
-        </provider>
-        
+        android:icon="@drawable/lau_icon"
+        android:label="@string/app_name" >
+
         <activity
             android:name="com.example.gallery.MainActivity"
             android:label="@string/app_name" >
@@ -28,17 +22,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity 
-            android:name="com.example.gallery.ShowImageActivity" >
+        <activity android:name="com.example.gallery.ShowImageActivity" >
         </activity>
-        <activity 
-            android:name="com.example.gallery.SDlist"
-            ></activity>
-        <activity android:name="com.example.gallery.TitleEditor"
+        <activity android:name="com.example.gallery.SDlist" >
+        </activity>
+        <activity
+            android:name="com.example.gallery.TitleEditor"
             android:label="edit"
             android:theme="@android:style/Theme.Holo.Dialog"
-            android:windowSoftInputMode="stateVisible">
+            android:windowSoftInputMode="stateVisible" >
         </activity>
+        <activity 
+            android:name="com.example.advanced.TestActivity"
+            ></activity>
     </application>
 
 </manifest>
