Use HorizontalScrollView to implement gallery. Change 'add from sdcard'

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,6 +35,9 @@
         <activity 
             android:name="com.example.advanced.TestActivity"
             ></activity>
+        <activity
+            android:name="com.example.gallery.ImageViewActivity"
+            ></activity>
     </application>
 
 </manifest>
