--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -37,6 +37,7 @@
             ></activity>
         <activity
             android:name="com.example.gallery.ImageViewActivity"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
             ></activity>
     </application>
 
